18 December 2004 Sylvain Pion
- Doc fixes.

17 December 2004 Sylvain Pion
- Fix typos.

17 November 2004 Andreas Fabri
In doc_tex/Interpolation/interpolation.tex: Put back the equation after that Lutz implemented the $$ in the latex_to_html 

1 October 2004 Andreas Fabri
- When interpolating on a surface in 3D space on must not project the infinite vertex

30 September 2004 Andreas Fabri
- Replaced "return 1;" with "return 0;" in  the example interpolation.C 

29 September 2004 Andreas Fabri
- Don't use default values of parameters of _test_surface_neighbors_3_cube as VC7 has problems with it

27 September 2004 Andreas Fabri
- Bug fix in natural_neighbor_coordinates_2.h and sibson_gradient_fitting.h

23 September 2004 Sylvain Pion
- Merge Power_test_degenerated_2 in Power_test_2 following the change in
  Regular_triangulation_2.
- Voronoi_traits cleanups.

11 September 2004 Sylvain Pion
- Replace _R by K.

10 September 2004 Sylvain Pion
- Repair breakage due to Weighted_point changes.

9 September 2004 Sylvain Pion
- Code reformatting.

8 September 2004 Sylvain Pion
- Remove makefile_local files, regenerate makefiles, update README files.

7 September 2004 Andreas Fabri
- Encapsulated \includegraphics in a \begin{texonly} and added \begin{htmlonly}

27 August 2004 Sylvain Pion
- Put myself as maintainer instead of Julia.

24 August 2004 Andreas Fabri
- changes in doc_tex for pdflatex

04 May 2004 Andreas Fabri
- Removed extra semicolons (leading to error messages on SunProCC)

12 April 2004 Sylvain Pion
- Add an assertion (denominator != 0) to prevent looping with Gmpq...
  (the real bug is not fixed though)

8 April 2004 Andreas Fabri
- changed variable name to get rid of a warning

25 March 2004 Radu Ursu
- made doc work with the new implementation of the Manual tools

25 Feb 2004 Sylvain Pion
- Small syntactic portability fixes.

Ver 1.2 (09/01/04)  repair of big mess with CVS repository

Ver 1.1 (28/11/03)  includes first version of surface neighbor coordinates